# SmartKT

./: Dockerfile  README.md  config.txt  echo.py  examine.py  final.calls  initialize.py  install_dependencies.sh  ls.cpp  mainexe.dd  newtest.i  pin.sh  start_website.sh  static_global.offset  vcs.py
PIN/: defrag.c
comments/: GenerateCommentsXMLForAFolder.py  knowledge_base_commentsXML.csv
exp/: lib.calls  test.calls
helpers/: dump2dxml.py
libpng/: png.calls  png.dwarfdump  png_preprocess.csv  pngerror.dwarfdump  pngerror_preprocess.csv  pngget.dwarfdump  pngget_preprocess.csv  pngmem.dwarfdump  pngmem_preprocess.csv  pngpread.dwarfdump  pngpread_preprocess.csv  pngread.dwarfdump  pngread_preprocess.csv  pngrio.dwarfdump  pngrio_preprocess.csv  pngrtran.dwarfdump  pngrtran_preprocess.csv  pngrutil.dwarfdump  pngrutil_preprocess.csv  pngset.dwarfdump  pngset_preprocess.csv  pngtest.calls  pngtest.dwarfdump  pngtest_preprocess.csv  pngtrans.dwarfdump  pngtrans_preprocess.csv  pngwio.dwarfdump  pngwio_preprocess.csv  pngwrite.dwarfdump  pngwrite_preprocess.csv  pngwtran.dwarfdump  pngwtran_preprocess.csv  pngwutil.dwarfdump  pngwutil_preprocess.csv
parsers/: calls_clang.py  clang_parser.py  (+6 more)
projects/testproj/: CMakeLists.txt
projects/testproj/lib/: CMakeLists.txt  lib.c  lib.dwarfdump
projects/testproj/src/: ._mytester.c  ._st_dep.c  ._st_dep.cpp  ._st_main.cpp  StartPOS.c  a.out  dep.dwarfdump  main  main.c  main.dwarfdump  mytest.c  mytester.c  newtest.c  run.dwarfdump  st_dep.c  st_dep.cpp  st_main.c  st_main.cpp  template.cpp  try.dwarfdump  virtual.cpp
(+172 files in other folders)
